<resources>
    <string name="app_name">ItsOkay</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Registrar</string>
    <string name="action_loading">Estamos quase lá!</string>
    <string name="action_register">Ainda não é cadastrado? Registre-se aqui</string>
    <string name="action_login">Entrar</string>
    <string name="error_invalid_email">Este email é invalido</string>
    <string name="error_invalid_password">Senha invalida (Deve conter mais de 8 digitos, alem de números e letras)</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>

    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="enter_your_email">Insira um email</string>
    <string name="enter_your_password">Insira uma senha</string>
    <string name="register_password">Senha</string>
    <string name="register_password_again">Insira a senha novamente</string>
    <string name="successfully_registred">Bem vindo!</string>
    <string name="regristration_error">Não foi possivel realizar o cadastro, por favor tente novamente</string>
    <string name="action_cancel">Cancelar</string>
    <string name="button_logout">Sair</string>

    <string name="title_activity_question_register">Olá</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="how_are_you">Quem é você?</string>
    <string name="name">Qual o seu nome?</string>
    <string name="date_of_bith">Qual a sua data de nascimento?</string>
    <string name="love">Amor ao próximo</string>
    <string name="fe">fe</string>
    <string name="generosidade">Generosidade</string>
    <string name="sabedoria">Sabedoria</string>
    <string name="tolerancia">Tolerância</string>
    <string name="cofirm">Confirmar</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Sair</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="tab_text_1">Tarefas</string>
    <string name="tab_text_2">Sequência de dias bons</string>
    <string name="tab_text_3">Conquistas</string>
    <string name="CB1">teste</string>
    <string name="CB2">teste</string>
    <string name="Botao">Go</string>
    <string name="cb2" />
    <string name="cb1" />
</resources>