<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jonnatas.itsokay.RegisterActivity">

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeigth"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        tools:text="@string/prompt_email"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.503" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeigth"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        tools:text="@string/prompt_password"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin"
        android:layout_marginRight="5dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.493" />

    <EditText
        android:id="@+id/editPasswordAgain"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeigth"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/register_password_again"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:text="@string/prompt_password" />

    <Button
        android:id="@+id/buttonRegister"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="@dimen/buttonWith"
        android:layout_height="@dimen/buttonHeigth"
        android:background="@android:color/holo_blue_bright"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/action_sign_in"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorLink="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordAgain"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />

</android.support.constraint.ConstraintLayout>
