<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrolId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/questionsBack"
        tools:context="com.example.jonnatas.itsokay.activity.QuestionRegisterActivity">

        <TextView
            android:id="@+id/textViewDataNasciemnto"
            android:layout_width="326dp"
            android:layout_height="26dp"
            android:text="Selecione a data de nascimento"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="31dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />


        <TextView
            android:id="@+id/textHowAreYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="casual"
            android:text="@string/how_are_you"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewQualifique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="casual"
            android:text="Qualifique-se em relação:"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextNasc" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="@dimen/text_with"
            android:layout_height="@dimen/text_heigth"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="@color/common_google_signin_btn_text_light_pressed"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="21dp"
            app:layout_constraintTop_toBottomOf="@+id/textHowAreYou"
            app:layout_constraintHorizontal_bias="0.505" />


        <!--asdasdasd-->

        <EditText
            android:id="@+id/editTextNasc"
            android:layout_width="@dimen/text_with"
            android:layout_height="@dimen/text_heigth"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:ems="10"
            android:hint="@string/date_of_bith"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="@color/common_google_signin_btn_text_light_pressed"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewDataNasciemnto"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textViewLove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/love"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewQualifique" />

        <SeekBar
            android:id="@+id/seekBarLove"
            android:layout_width="278dp"
            android:layout_height="19dp"
            android:max="10"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewLove"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />


        <TextView
            android:id="@+id/textViewFe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fe"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/seekBarLove" />

        <SeekBar
            android:id="@+id/seekBarFe"
            android:layout_width="278dp"
            android:layout_height="19dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:max="10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFe"
            app:layout_constraintHorizontal_bias="0.5" />

        <TextView
            android:id="@+id/textViewTolerancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tolerância"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/seekBarFe" />

        <SeekBar
            android:id="@+id/seekBarTolerancia"
            android:layout_width="278dp"
            android:layout_height="19dp"
            android:max="10"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewTolerancia"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textViewGenerosidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generosidade"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/seekBarTolerancia" />

        <SeekBar
            android:id="@+id/seekBarGenerosidade"
            android:layout_width="278dp"
            android:layout_height="19dp"
            android:max="10"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewGenerosidade"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textViewSabedoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sabedoria"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/seekBarGenerosidade" />

        <SeekBar
            android:id="@+id/seekBarSabedoria"
            android:layout_width="278dp"
            android:layout_height="19dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="19dp"
            android:max="10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSabedoria" />

        <Button
            android:id="@+id/buttonSubmit"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="confirmRegister"
            android:text="@string/cofirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarSabedoria" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>